custom cursors, background

--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,11 @@
       class="h-screen container flex flex-col justify-center items-center text-center m-auto"
       id="login"
     >
-      <h1 class="text-3xl">Welcome to Guild Chat!</h1>
-      <form class="xl:w-2/5 rounded border-solid p-4 shadow-md" id="login-form">
+      <form
+        class="xl:w-2/5 rounded border-solid p-4 shadow-md bg-white"
+        id="login-form"
+      >
+        <h1 class="text-3xl">Welcome to Guild Chat!</h1>
         <div>
           <h2>Username</h2>
           <input
