--- a/public/index.html
+++ b/public/index.html
@@ -29,25 +29,6 @@
             autofocus
           />
         </div>
-        <div>
-          <h2>Channel</h2>
-          <select id="channel" class="d-block w-3/4 p-2 mb-4 border shadow">
-            <option value="Central Tyria">Central Tyria</option>
-            <option value="Living World: Icebrood Saga">Living World: Icebrood Saga</option>
-            <option value="Living World: Season 4">Living World: Season 4</option>
-            <option value="Path of Fire">Path of Fire</option>
-            <option value="Living World: Season 3">Living World: Season 3</option>
-            <option value="Heart of Thorns">Heart of Thorns</option>
-            <option value="Player vs. Player">Player vs. Player</option>
-            <option value="World vs. World">World vs. World</option>
-            <option value="Dungeons">Dungeons</option>
-            <option value="Fractals of the Mists">Fractals of the Mists</option>
-            <option value="Raids">Raids</option>
-            <option value="Strike Missions">Strike Missions</option>
-            <option value="Festivals">Festivals</option>
-            <option value="Guild Recruitment">Guild Recruitment</option>
-          </select>
-        </div>
         <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-teal-100 font-bold py-2 px-4 border border-blue-700 rounded">
           Join Chat
         </button>
@@ -57,23 +38,32 @@
     <!-- Chat -->
     <div class="h-screen flex flex-col justify-center items-center m-auto hidden" id="chat">
       <div class="xl:w-8/12 rounded border-solid shadow-md bg-teal-800 text-teal-100">
+        <div class="border-b-2 border-teal-900 grid grid-cols-5 text-center items-center text-2xl">
+          <div class="col-span-1">
+            <img class="p-2" src="/images/chat-logo.png" />
+          </div>
+          <h2 id="channel-name" class="col-span-3"></h2>
+          <div>
+            <button onclick="location.reload()" class="col-span-1 p-1 hover:text-green-600 outline-none">Leave Chat</button>
+          </div>
+        </div>
         <div class="grid grid-cols-5">
           <div class="chat-height col-span-1 pt-3 pl-3 overflow-y-auto">
             <h2 class="text-3xl pl-1">Channels</h2>
-            <h3 class="text-xl p-1">Central Tyria</h3>
-            <h3 class="text-xl p-1">Icebrood Saga</h3>
-            <h3 class="text-xl p-1">Living World: Season 4</h3>
-            <h3 class="text-xl p-1">Path of Fire</h3>
-            <h3 class="text-xl p-1">Living World: Season 3</h3>
-            <h3 class="text-xl p-1">Heart of Thorns</h3>
-            <h3 class="text-xl p-1">Player vs. Player</h3>
-            <h3 class="text-xl p-1">World vs. World</h3>
-            <h3 class="text-xl p-1">Dungeons</h3>
-            <h3 class="text-xl p-1">Fractals of the Mists</h3>
-            <h3 class="text-xl p-1">Raids</h3>
-            <h3 class="text-xl p-1">Strike Missions</h3>
-            <h3 class="text-xl p-1">Festivals</h3>
-            <h3 class="text-xl p-1">Guild Recruitment</h3>
+            <button onclick="changeChannel()" value="Central Tyria" class="text-xl p-1 hover:text-green-600 block">Central Tyria</button>
+            <button onclick="changeChannel()" value="Icebrood Saga" class="text-xl p-1 hover:text-green-600 block">Icebrood Saga</button>
+            <button onclick="changeChannel()" value="Living World: Season 4" class="text-xl p-1 hover:text-green-600 block">Living World: Season 4</button>
+            <button onclick="changeChannel()" value="Path of Fire" class="text-xl p-1 hover:text-green-600 block">Path of Fire</button>
+            <button onclick="changeChannel()" value="Living World: Season 3" class="text-xl p-1 hover:text-green-600 block">Living World: Season 3</button>
+            <button onclick="changeChannel()" value="Heart of Thorns" class="text-xl p-1 hover:text-green-600 block">Heart of Thorns</button>
+            <button onclick="changeChannel()" value="Player vs. Player" class="text-xl p-1 hover:text-green-600 block">Player vs. Player</button>
+            <button onclick="changeChannel()" value="World vs. World" class="text-xl p-1 hover:text-green-600 block">World vs. World</button>
+            <button onclick="changeChannel()" value="Dungeons" class="text-xl p-1 hover:text-green-600 block">Dungeons</button>
+            <button onclick="changeChannel()" value="Fractals of the Mists" class="text-xl p-1 hover:text-green-600 block">Fractals of the Mists</button>
+            <button onclick="changeChannel()" value="Raids" class="text-xl p-1 hover:text-green-600 block">Raids</button>
+            <button onclick="changeChannel()" value="Strike Missions" class="text-xl p-1 hover:text-green-600 block">Strike Missions</button>
+            <button onclick="changeChannel()" value="Festivals" class="text-xl p-1 hover:text-green-600 block">Festivals</button>
+            <button onclick="changeChannel()" value="Guild Recruitment" class="text-xl p-1 hover:text-green-600 block">Guild Recruitment</button>
           </div>
           <div class="chat-height col-span-3 bg-teal-700 p-4 pr-2 flex flex-col justify-between">
             <div class="chat-messages overflow-y-auto"></div>
@@ -83,8 +73,7 @@
           </div>
           <div class="chat-height col-span-1 pt-3 pl-4 overflow-y-auto">
             <h2 class="text-3xl" id="online-number"></h2>
-            <ul id="users">
-            </ul>
+            <ul id="users"></ul>
           </div>
         </div>
       </div>
