--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- Login -->
     <div class="h-screen container flex flex-col justify-center items-center text-center m-auto" id="login">
-      <form class="xl:w-2/5 rounded border-solid p-4 shadow-md bg-white" id="login-form">
+      <form class="mx-2 sm:w-4/5 md:w-3/5 lg:w-2/5 xl:w-2/5 rounded border-solid p-4 shadow-md bg-white" id="login-form">
         <img class="w-3/4 mx-auto mt-1" src="/images/chat-logo-colored.png" />
         <h1 class="text-4xl mt-4">Greetings, Commander!</h1>
         <div class="w-3/4 mx-auto">
@@ -35,51 +35,54 @@
           Join Chat
         </button>
       </form>
-      
     </div>
 
     <!-- Chat -->
     <div class="h-screen flex flex-col justify-center items-center m-auto hidden" id="chat">
-      <div class="xl:w-8/12 rounded border-solid shadow-md bg-teal-800 text-teal-100">
-        <div class="border-b-2 border-teal-900 grid grid-cols-5 text-center items-center text-2xl">
+      <div class="chat-container mx-2 xl:w-10/12 rounded border-solid shadow-md bg-teal-800 text-teal-100">
+
+        <div class="grid grid-cols-5 border-b-2 border-teal-900 text-center items-center text-2xl">
           <div class="col-span-1">
             <img class="p-2" src="/images/chat-logo.png" />
           </div>
-          <h2 id="channel-name" class="col-span-3"></h2>
+          <h2 class="col-span-3" id="channel-name"></h2>
           <div>
             <button onclick="location.reload()" class="col-span-1 p-1 transition duration-300 hover:text-green-600 outline-none">Leave Chat</button>
           </div>
         </div>
+
         <div class="grid grid-cols-5">
-          <div class="chat-height col-span-1 pt-3 pl-2 overflow-y-auto">
+          <div class="col-span-1 chat-height pt-1 lg:pt-2 xl:pt-3 pl-1 xl:pl-2 overflow-y-auto">
             <h2 class="text-3xl pl-2">Channels</h2>
-            <button onclick="changeChannel()" value="Central Tyria" class="text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="mr-2" src="/icons/LFG_UI_Central_Tyria_icon.png"></img>Central Tyria</button>
-            <button onclick="changeChannel()" value="Icebrood Saga" class="text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="mr-2" src="/icons/LFG_UI_Icebrood_Saga_icon.png"></img>Icebrood Saga</button>
-            <button onclick="changeChannel()" value="Path of Fire" class="text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="mr-2" src="/icons/LFG_UI_PoF_icon.png"></img>Path of Fire</button>
-            <button onclick="changeChannel()" value="Heart of Thorns" class="text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="mr-2" src="/icons/LFG_UI_HoT_icon.png"></img>Heart of Thorns</button>
-            <button onclick="changeChannel()" value="Player vs. Player" class="text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="mr-2" src="/icons/LFG_UI_PvP_icon.png"></img>Player vs. Player</button>
-            <button onclick="changeChannel()" value="World vs. World" class="text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="mr-2" src="/icons/LFG_UI_WvW_icon.png"></img>World vs. World</button>
-            <button onclick="changeChannel()" value="Dungeons" class="text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="mr-2" src="/icons/LFG_UI_Dungeons_icon.png"></img>Dungeons</button>
-            <button onclick="changeChannel()" value="Fractals of the Mists" class="text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="mr-2" src="/icons/LFG_UI_Fractals_icon.png"></img>Fractals of the Mists</button>
-            <button onclick="changeChannel()" value="Raids" class="text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="mr-2" src="/icons/LFG_UI_Raids_icon.png"></img>Raids</button>
-            <button onclick="changeChannel()" value="Strike Missions" class="text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="mr-2" src="/icons/LFG_UI_Strikes_icon.png"></img>Strike Missions</button>
-            <button onclick="changeChannel()" value="Festivals" class="text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="mr-2" src="/icons/LFG_UI_Festivals_icon.png"></img>Festivals</button>
-            <button onclick="changeChannel()" value="Guild Recruitment" class="text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="mr-2" src="/icons/LFG_UI_Guild_icon.png"></img>Guild Recruitment</button>
+            <button onclick="changeChannel()" value="Central Tyria" class="text-xl lg:text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="hidden lg:block mr-2" src="/icons/LFG_UI_Central_Tyria_icon.png"></img>Central Tyria</button>
+            <button onclick="changeChannel()" value="Icebrood Saga" class="text-xl lg:text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="hidden lg:block mr-2" src="/icons/LFG_UI_Icebrood_Saga_icon.png"></img>Icebrood Saga</button>
+            <button onclick="changeChannel()" value="Path of Fire" class="text-xl lg:text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="hidden lg:block mr-2" src="/icons/LFG_UI_PoF_icon.png"></img>Path of Fire</button>
+            <button onclick="changeChannel()" value="Heart of Thorns" class="text-xl lg:text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="hidden lg:block mr-2" src="/icons/LFG_UI_HoT_icon.png"></img>Heart of Thorns</button>
+            <button onclick="changeChannel()" value="Player vs. Player" class="text-xl lg:text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="hidden lg:block mr-2" src="/icons/LFG_UI_PvP_icon.png"></img>Player vs. Player</button>
+            <button onclick="changeChannel()" value="World vs. World" class="text-xl lg:text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="hidden lg:block mr-2" src="/icons/LFG_UI_WvW_icon.png"></img>World vs. World</button>
+            <button onclick="changeChannel()" value="Dungeons" class="text-xl lg:text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="hidden lg:block mr-2" src="/icons/LFG_UI_Dungeons_icon.png"></img>Dungeons</button>
+            <button onclick="changeChannel()" value="Fractals" class="text-xl lg:text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="hidden lg:block mr-2" src="/icons/LFG_UI_Fractals_icon.png"></img>Fractals</button>
+            <button onclick="changeChannel()" value="Raids" class="text-xl lg:text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="hidden lg:block mr-2" src="/icons/LFG_UI_Raids_icon.png"></img>Raids</button>
+            <button onclick="changeChannel()" value="Strike Missions" class="text-xl lg:text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="hidden lg:block mr-2" src="/icons/LFG_UI_Strikes_icon.png"></img>Strike Missions</button>
+            <button onclick="changeChannel()" value="Festivals" class="text-xl lg:text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="hidden lg:block mr-2" src="/icons/LFG_UI_Festivals_icon.png"></img>Festivals</button>
+            <button onclick="changeChannel()" value="Guilds" class="text-xl lg:text-2xl flex py-1 transition duration-300 hover:text-green-600 w-full"><img class="hidden lg:block mr-2" src="/icons/LFG_UI_Guild_icon.png"></img>Guilds</button>
           </div>
-          <div class="chat-height col-span-3 bg-teal-700 p-4 pr-2 flex flex-col justify-between">
+          <div class="col-span-3 chat-height bg-teal-700 p-4 pr-2 flex flex-col justify-between">
             <div class="chat-messages overflow-y-auto"></div>
+            <div id="typing" class="h-8 mx-10"></div>
             <div class="flex mx-10">
             <form id="chat-form" class="text-teal-100 w-full">
-              <input class="d-block w-full p-2 shadow rounded bg-teal-600 disabled-input" id="message" type="text" placeholder="Enter message..." autocomplete="off" required disabled />
+              <input class="d-block w-full p-2 shadow rounded bg-teal-600 disabled-input" id="message" type="text" placeholder="Enter your message" autocomplete="off" required disabled />
             </form>
             <button class="disabled-input w-12 text-3xl" id="emoji-btn" disabled>&#128515;</button>
             </div>
           </div>
-          <div class="chat-height col-span-1 pt-3 pl-4 overflow-y-auto">
+          <div class="col-span-1 chat-height pt-1 lg:pt-2 xl:pt-3 pl-4 overflow-y-auto">
             <h2 class="flex" id="online-number"></h2>
             <ul class="pl-1" id="users"></ul>
           </div>
         </div>
+
       </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
